--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -199,7 +199,13 @@ setting[type="menulist"] {
 }
 
 #addons-page .view-pane:not([type="theme"]) #getthemes-container,
-#addons-page .view-pane:not([type="plugin"]) #plugindeprecation-notice,
+#addons-page .view-pane:not([type="plugin"]) #plugindeprecation-notice {
+  display: none;
+}
+#addons-page .view-pane:not([type="plugin"]) .plugin-info-container {
+  display: none;
+}
+
 #addons-page .view-pane:not([type="experiment"]) .experiment-info-container {
   display: none;
 }
